<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingHorizontal="20dp"
    android:paddingBottom="10dp"
    android:background="@color/lightGrey">

<!--    <TextView-->
<!--        android:id="@+id/titleBlog"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:text="@string/app_name"-->
<!--        style="@style/TitleTextStyle"-->
<!--        android:layout_marginBottom="20dp"/>-->

    <TextView
        android:id="@+id/ajoutArticle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:text="Ajouter un article"
        style="@style/ArticleTextTitle"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_title_input"
        android:background="@drawable/rounded_corner_view"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        style="@style/add_article"/>

    <EditText
        android:id="@+id/descInput"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/add_content_input"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:background="@drawable/rounded_corner_view"
        style="@style/add_article"/>

<!--    <EditText-->
<!--        android:id="@+id/contenu"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="250dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:hint="@string/add_content_input"-->
<!--        android:padding="20dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:background="@drawable/rounded_corner_view"-->
<!--        style="@style/add_article"/>-->

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_button"
        android:background="@drawable/rounded_button"
        style="@style/ArticleTextTitle"
        android:textColor="#fff"
        />

    <ImageView
        android:id="@+id/ic_cancel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_cancel" />
</LinearLayout>